--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -5,6 +5,18 @@
 </ion-header>
 
 <ion-content padding class="background">
+
+  <ion-grid>
+    <ion-row>
+    
+      <ion-col>
+        <img src="assets/img/logo.png" class="logo">
+      </ion-col>
+ 
+    </ion-row>
+  </ion-grid>
+
+
   <form class="form" [formGroup]="validations_form" (ngSubmit)="loginUser(validations_form.value)">
 
     <ion-item color="#ffffff">
