--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -34,6 +34,7 @@
       <ion-label position="floating" color="light">Password</ion-label>
       <ion-input type="password" formControlName="password" class="form-controll" required></ion-input>
     </ion-item>
+
     <div class="validation-errors">
       <ng-container *ngFor="let validation of validation_messages.password">
         <div class="error-message"
@@ -43,10 +44,12 @@
       </ng-container>
     </div>
 
-    <!-- <ion-item color="#ffffff">
+    <ion-item color="#ffffff">
       <ion-label position="floating" color="light">First Name</ion-label>
       <ion-input type="text" formControlName="firstname"></ion-input>
     </ion-item>
+
+    <!--
 
     <ion-item color="#ffffff">
       <ion-label position="floating" color="light">Last Name</ion-label>
@@ -60,15 +63,15 @@
 
 
 
-    <ion-button expand="block" style="margin-top: 10%; margin-left: 10%; margin-right: 10%;" 
+    <ion-button expand="block" style="margin-top: 10%; margin-left: 10%; margin-right: 10%;"
     color ="primary" class="submit-btn" type="submit" [disabled]="!validations_form.valid">Register</ion-button><br>
 
     <label class="error-message">{{errorMessage}}</label>
     <label class="success-message">{{successMessage}}</label>
   </form>
   <p style="margin-left: 2.5%;" class="go-to-login">
-    
+
     Already have an account? <a (click)="goLoginPage()">Try to Log In.</a>
-  
+
   </p>
 </ion-content>
