Fetched data from firestore

--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -15,7 +15,7 @@
     <ion-row>
 
       <ion-col>
-        Email: 
+        Email:
       </ion-col>
 
       <ion-col text-center>
@@ -28,11 +28,11 @@
     <ion-row>
 
       <ion-col>
-        First Name: 
+        First Name:
       </ion-col>
 
       <ion-col text-center>
-    
+        {{firstName}}
       </ion-col>
 
       <ion-col></ion-col>
@@ -41,11 +41,24 @@
     <ion-row>
 
       <ion-col>
-        Last Name: 
+        Last Name:
       </ion-col>
 
       <ion-col text-center>
-    
+        {{lastName}}
+      </ion-col>
+
+      <ion-col></ion-col>
+    </ion-row>
+
+    <ion-row>
+
+      <ion-col>
+        Phone Number:
+      </ion-col>
+
+      <ion-col text-center>
+        {{phone}}
       </ion-col>
 
       <ion-col></ion-col>
