--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -49,8 +49,6 @@
       <ion-input type="text" formControlName="firstname"></ion-input>
     </ion-item>
 
-    <!--
-
     <ion-item color="#ffffff">
       <ion-label position="floating" color="light">Last Name</ion-label>
       <ion-input type="text" formControlName="lastname"></ion-input>
@@ -59,7 +57,7 @@
     <ion-item color="#ffffff">
       <ion-label position="floating" color="light">Phone Number</ion-label>
       <ion-input type="tel" formControlName="phone"></ion-input>
-    </ion-item> -->
+    </ion-item>
 
 
 
