--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -1,5 +1,6 @@
 ion-tab-bar, ion-tab-button{
-    background-color: #252a34;
+    --background-color: #252a34;
+    --color-selected: #d92528;
    }
    
    ion-icon{
@@ -9,6 +10,7 @@ ion-tab-bar, ion-tab-button{
 
    .tab-button {
     min-width: 150px;
+    
  }
 
 //    ion-label{
