--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -24,13 +24,13 @@
 
       <ion-thumbnail slot="start">
 
-        <img src="assets/img/miraj.PNG">
+        <img src="https://www.dropbox.com/s/0iit1so4pg7zq25/miraj.PNG?dl=0">
 
       </ion-thumbnail>
 
       <ion-label>{{restaurants.restName}}</ion-label>
 
-      <ion-button fill="solid" >VIEW</ion-button>
+      <ion-button fill="solid" (click)="resInfo()">VIEW</ion-button>
 
     </ion-item>
 
