--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -17,8 +17,6 @@
   font-size: 16px;
   line-height: 22px;
 
-  
-
   margin: 0;
 }
 
@@ -30,9 +28,18 @@ ion-content.background{
   --background: url(../../assets/img/background.png) 0 0/100% 100% no-repeat;
 }
 
-
 ion-content.logo{
   padding: 5px;
   width: 150px;
 }
+
+  ion-button{
+    --background:#97393bc5; 
+    --border-color:  #d92528;
+    --border-radius: 9px;
+    --border-width: 5px;
+    --background-hover: #d92528;
+    --background-hover-opacity: 100%;  
+}
+
 
