--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -62,7 +62,7 @@
 
 
     <ion-button expand="block" style="margin-top: 10%; margin-left: 10%; margin-right: 10%;"
-    color ="primary" class="submit-btn" type="submit" [disabled]="!validations_form.valid">Register</ion-button><br>
+    class="submit-btn" type="submit" [disabled]="!validations_form.valid">Register</ion-button><br>
 
     <label class="error-message">{{errorMessage}}</label>
     <label class="success-message">{{successMessage}}</label>
