--- a/src/app/res-info/res-info.page.html
+++ b/src/app/res-info/res-info.page.html
@@ -14,14 +14,14 @@
 
   <ion-row class="">
 
-    <img src="assets/img/mirajfood.PNG" >
+    <img src="{{restDisplay}}" >
 
   </ion-row>
 
     <ion-text class="title">
 
-      <h2>Miraj Restaurant</h2> 
-      <p>M-City Jalan Ampang</p> <br>
+      <h2>{{restName}}</h2> 
+      <h6>{{restAddress}}</h6> <br>
 
     </ion-text>
 
@@ -29,19 +29,15 @@
     <ion-item lines="none">
 
       <ion-icon name="chatbubble-outline"></ion-icon> 
-      <h2>Description </h2>
+      <h5>Description </h5>
 
     </ion-item>
 
-    <p>Miraj is a middle east restaurant open from 10 a.m. to 10 p.m. everyday </p>
+    <p>{{restDescription}}</p>
 
+  <ion-button fill="solid" expand='block' (click)="booking()" >BOOK NOW</ion-button>
 
-    <ion-button fill="solid" expand='block' >BOOK</ion-button>
+</ion-content>
 
 
   
-
-
-
-
-</ion-content>
