--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -6,13 +6,15 @@
 
 <ion-content class="title">
 
-    <ion-row class="logo">
+    <ion-item class="logo" lines="none">
 
         <img src="assets/img/menu.png" class="menu">
 
+        <ion-label></ion-label>
+
         <ion-button size="small" (click)="profile()">Profile</ion-button>
 
-    </ion-row>
+    </ion-item>
 
     <ion-row>
 
@@ -24,13 +26,13 @@
 
       <ion-thumbnail slot="start">
 
-        <img src="https://www.dropbox.com/s/0iit1so4pg7zq25/miraj.PNG?dl=0">
+        <img src="{{restaurants.restThumbnail}}">
 
       </ion-thumbnail>
 
       <ion-label>{{restaurants.restName}}</ion-label>
 
-      <ion-button fill="solid" (click)="resInfo()">VIEW</ion-button>
+      <ion-button fill="solid" (click)="resInfo(restaurants.uid)">VIEW</ion-button>
 
     </ion-item>
 
