--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -46,7 +46,7 @@
     </div>
     
 
-    <ion-button expand="block" style="margin-top: 10%; margin-left: 10%; margin-right: 10%;" color ="primary" class="submit-btn" type="submit" [disabled]="!validations_form.valid">Log In</ion-button>
+    <ion-button expand="block" style="margin-top: 10%; margin-left: 10%; margin-right: 10%;" class="submit-btn" type="submit" [disabled]="!validations_form.valid">Log In</ion-button>
 
     <label class="error-message">{{errorMessage}}</label>
   </form>
