--- a/src/app/res-info/res-info.page.scss
+++ b/src/app/res-info/res-info.page.scss
@@ -7,6 +7,7 @@ ion-content{
 ion-text.title{
     text-align: center;
     text-justify: auto;
+
 }
 
 ion-icon{
@@ -15,17 +16,41 @@ ion-icon{
 
 
 h2{
+
     color: #d92528;
     padding-left: 10px;
     padding-top: 0px;
    
 }
 
-p{
+h5{
+
+    font-size: medium;
+    color:#d92528;
+    padding-left: 10px;
+    padding-top: 0px;
+    padding-right: 10px;
+ 
+
+}
+
+h6{
+    font-size: small;
     color:white;
     padding-left: 10px;
     padding-top: 0px;
     padding-right: 10px;
+
+}
+
+p{
+    font-size: small;
+    color:white;
+    padding-left: 10px;
+    padding-top: 0px;
+    padding-right: 10px;
+    text-align: justify;
+    text-justify: inter-word;
    
 }
 
@@ -36,6 +61,5 @@ ion-button{
     --border-width: 5px;
     --background-hover: #d92528;
     --background-hover-opacity: 100%;
-    
-  
+    bottom: 10px;
 }
