--- a/src/app/booking/booking.page.html
+++ b/src/app/booking/booking.page.html
@@ -1,9 +1,16 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>booking</ion-title>
+    <ion-title>Booking</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
+  <ion-item class="logo" lines="none">
+
+    <img src="assets/img/menu.png" class="menu">
+
+
+</ion-item>
 
 </ion-content>
