--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -40,6 +40,7 @@ ion-content.logo{
     --border-width: 5px;
     --background-hover: #d92528;
     --background-hover-opacity: 100%;  
+    --background-activated: #d92528c0;
 }
 
 
