--- a/src/app/res-info/res-info.page.html
+++ b/src/app/res-info/res-info.page.html
@@ -35,9 +35,18 @@
 
     <p>{{restDescription}}</p>
 
-  <ion-button fill="solid" expand='block' (click)="booking()" >BOOK NOW</ion-button>
 
 </ion-content>
+
+<ion-footer>
+
+  <ion-toolbar>
+
+    <ion-button fill="solid" expand='block' (click)="booking()" >BOOK NOW</ion-button>
+
+  </ion-toolbar>
+
+</ion-footer>
 
 
   
