--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -8,15 +8,13 @@
 
   <img src="assets/img/menu.png">
 
-  <ion-label></ion-label>
-
 </ion-item>
 
 <ion-content [fullscreen]="true">
 
-  <ion-searchbar showcancelbutton="focus" (ionInput)="filterList($event)">
+  <ion-searchbar showCancelbutton="focus" (ionInput)="filterList($event)">
 
-  </ion-searchbar> <br>
+  </ion-searchbar>
 
   <ion-list lines="none">
     <ion-item *ngFor="let Restaurant of restList" class="restaurant">
