--- a/src/app/dashboard/dashboard.page.scss
+++ b/src/app/dashboard/dashboard.page.scss
@@ -15,6 +15,7 @@ ion-content{
         --border-width: 5px;
         --background-hover: #d92528;
         --background-hover-opacity: 100%; 
+        --background-activated: #d92528c0;
     }
 
     img { 
@@ -37,6 +38,8 @@ ion-content{
 
   ion-item.restaurant{
 
+
+    padding-top: 3%;
     padding-bottom: 3%;
 
 
@@ -64,6 +67,7 @@ ion-content{
         --border-width: 5px;
         --background-hover: #d92528;
         --background-hover-opacity: 100%;  
+        --background-activated: #d92528c0;
     }
 
   }
