--- a/src/app/profile/profile.page.scss
+++ b/src/app/profile/profile.page.scss
@@ -16,6 +16,7 @@ ion-button{
     --background: #d15759;
     --background-hover: #d92528;
     --background-hover-opacity: 100%;
+    --background-activated: #d92528c0;
 }
 
 
