--- a/src/app/register/register.page.scss
+++ b/src/app/register/register.page.scss
@@ -11,6 +11,7 @@ ion-button{
   --border-width: 5px;
   --background-hover: #d92528;
   --background-hover-opacity: 100%;  
+  --background-activated: #d92528c0;
 }
 
 a{
