--- a/src/app/res-info/res-info.page.html
+++ b/src/app/res-info/res-info.page.html
@@ -42,7 +42,7 @@
 
   <ion-toolbar>
 
-    <ion-button fill="solid" expand='block' (click)="booking()" >BOOK NOW</ion-button>
+    <ion-button fill="solid" expand='block' (click)="booking(restID)" >BOOK NOW</ion-button>
 
   </ion-toolbar>
 
