--- a/src/app/choose/choose.page.scss
+++ b/src/app/choose/choose.page.scss
@@ -27,9 +27,11 @@ ion-card {
     }
 
     ion-segment {
+
         background-color: transparent !important;
         padding: 1em 0 1em 0;
         margin: 0;
+
         ion-segment-button {
             --color-checked: white !important;
             --background-checked: #d92528;
@@ -44,12 +46,40 @@ ion-card {
         }
     }
 
-    .tables-wrapper {
-        display: grid;
-        grid-template-columns: repeat(3, minmax(8em, auto));
-        grid-template-rows: repeat(2, minmax(1em, auto));
-        justify-content: space-between;
+  .grid-full {
+
+        ion-col {
+            flex: 0 0 50%;
+            max-width: 48%;
+            padding: 10 px 0;
+        }
+        .row {
+            padding: 0;
+        }
+        .col {
+            padding: 10 px 0;
+        }
+        ion-card {
+            align-items: center; 
+            margin: 0 0 12px 12px;
+            padding: 14px;
+            box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.10);
+            border-radius: 4px;
+            --background: #d92528;
+            --color: white;
+
+            h1 {
+                font-weight: 400;
+                font-size: 2.5 rem;
+            }
+            p {
+                font-weight: 100;
+                font-size: 10 rem;
+            }
+        }
     }
+
+
 
     .table-item {
         content: '';
