Update choose table and Booking Page

--- a/src/app/booking/booking.page.html
+++ b/src/app/booking/booking.page.html
@@ -10,7 +10,29 @@
 
     <img src="assets/img/menu.png" class="menu">
 
+</ion-item>
+
+<ion-row>
+
+  <h1>Booking</h1>
+
+</ion-row>
+
+<ion-item class="booking" lines="full" >
+
+  <ion-label postion="fixed">
+    
+    <h2>2 February 2021</h2>
+    <p>Miraj Restaurant</p> 
+
+
+  </ion-label>
+  
+
+  <ion-button fill="solid" >VIEW</ion-button>
 
 </ion-item>
+
+
 
 </ion-content>
