--- a/src/app/booking/booking.page.html
+++ b/src/app/booking/booking.page.html
@@ -29,7 +29,7 @@
   </ion-label>
   
 
-  <ion-button fill="solid" >VIEW</ion-button>
+  <ion-button fill="solid" (click)="bookDetail()">VIEW</ion-button>
 
 </ion-item>
 
