Display Booking and Details

--- a/src/app/book-detail/book-detail.page.html
+++ b/src/app/book-detail/book-detail.page.html
@@ -18,28 +18,28 @@
     <img src="https://firebasestorage.googleapis.com/v0/b/bitenow-bc93b.appspot.com/o/miraj.PNG?alt=media&token=ada3c392-2cbe-4484-a7c2-3128939c4514" />
 
     <ion-card-header>
-      <ion-card-subtitle>2 February 2021</ion-card-subtitle>
-      <ion-card-title>Miraj Restaurant</ion-card-title>
+      <ion-card-subtitle>{{date}}</ion-card-subtitle>
+      <ion-card-title>{{restName}}</ion-card-title>
     </ion-card-header>
 
     <ion-card-content>
-      Booking ID: fkjsdfhjj
+      Booking ID: {{bookingID}}
     </ion-card-content>
 
     <ion-card-content>
-      User: Luqman
+      User: {{userName}}
     </ion-card-content>
 
     <ion-card-content>
-      Time: 7:00 P.M.
+      Time: {{time}} P.M.
     </ion-card-content>
 
     <ion-card-content>
-      No. of person: 4 person
+      No. of person: {{noPerson}}
     </ion-card-content>
 
     <ion-card-content>
-      Table: Table 3
+      Table: {{tableNo}}
     </ion-card-content>
 
   </ion-card>
