--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -16,9 +16,9 @@
 			<ion-label>Booking</ion-label>
 		</ion-tab-button>
 
-    <ion-tab-button tab="saved">
-      <ion-icon name="bookmark-sharp"></ion-icon>
-			<ion-label>Saved</ion-label>
+    <ion-tab-button tab="profile">
+      <ion-icon name="person-sharp"></ion-icon>
+			<ion-label>Profile</ion-label>
 		</ion-tab-button>
 
 	</ion-tab-bar>
