--- a/src/app/book-detail/book-detail.page.scss
+++ b/src/app/book-detail/book-detail.page.scss
@@ -62,13 +62,13 @@ ion-footer{
         
 
         ion-button{
-            --background:#d925288a; 
+            --background:#f52d30 ; 
             --border-color:  #d92528;
             --border-radius: 9px;
             --border-width: 5px;
             --background-hover: #d92528;
             --background-hover-opacity: 100%;
-            --background-activated: #d92528c0;
+            --background-activated: #d925288a;
         }
 
     }
