--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -29,7 +29,7 @@
 </ion-content>
 <ion-footer (click)="logout()">
   <ion-toolbar >
-    <ion-title text-center>Log out</ion-title>
+    <ion-title text-center>Log Out</ion-title>
   </ion-toolbar>
 </ion-footer>
 
