--- a/src/app/book-detail/book-detail.page.html
+++ b/src/app/book-detail/book-detail.page.html
@@ -15,7 +15,7 @@
 
   <ion-card class="details">
 
-    <img src="https://firebasestorage.googleapis.com/v0/b/bitenow-bc93b.appspot.com/o/miraj.PNG?alt=media&token=ada3c392-2cbe-4484-a7c2-3128939c4514" />
+    <img src="{{restDisplay}}" >
 
     <ion-card-header>
       <ion-card-subtitle>{{date}}</ion-card-subtitle>
@@ -42,6 +42,7 @@
       Table: {{tableNo}}
     </ion-card-content>
 
+  
   </ion-card>
 
   <ion-card class="reminder">
